force-app/main/default/objects/breg_Transaction_Business_Info__c/breg_Transaction_Business_Info__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-2269</description>
    <label>Transaction Business Info</label>
    <nameField>
        <displayFormat>TR-BI-{00000000}</displayFormat>
        <label>Transaction Business Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Business Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>