force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Bounced_Check__c.field-meta.xml
<CustomField>
    <fullName>breg_Bounced_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-2932</description>
    <label>Bounced Check</label>
    <type>Checkbox</type>
</CustomField>