force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_BRIM_BUSINESS_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_BUSINESS_ID__c</fullName>
    <description>Aalta BREG-2269</description>
    <externalId>true</externalId>
    <label>BRIM BUSINESS ID</label>
    <length>22</length>
    <type>Text</type>
</CustomField>