force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_BRIM_LICENSE_YEAR__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_LICENSE_YEAR__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>BRIM LICENSE YEAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>