force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_BRIM_LIMIT_1__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_LIMIT_1__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Stock Limit 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>