force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_BRIM_LIMIT_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_LIMIT_DT__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Stock Limit Date</label>
    <type>Date</type>
</CustomField>