force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_BRIM_LLP_FL__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_LLP_FL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-2269</description>
    <label>BRIM LLP FL</label>
    <type>Checkbox</type>
</CustomField>