force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_BRIM_PARTNER_MAINTENANCE__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_PARTNER_MAINTENANCE__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>BRIM PARTNER MAINTENANCE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>081</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>MEM</fullName>
            </value>
            <value>
                <fullName>MGR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>