force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_BRIM_PENDING_TRANS_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_PENDING_TRANS_ID__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>BRIM PENDING TRANS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>