force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Consent__c.field-meta.xml
<CustomField>
    <fullName>breg_Consent__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Consent</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>