force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Entity__c.field-meta.xml
<CustomField>
    <fullName>breg_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-2269</description>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Business Info</relationshipLabel>
    <relationshipName>Transaction_Business_Info</relationshipName>
    <type>Lookup</type>
</CustomField>