force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_File_Suffix__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Suffix__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>File Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>