force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Formation_Country__c.field-meta.xml
<CustomField>
    <fullName>breg_Formation_Country__c</fullName>
    <description>Aalta BREG-2363</description>
    <label>Formation Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>