force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Formation_State__c.field-meta.xml
<CustomField>
    <fullName>breg_Formation_State__c</fullName>
    <description>Aalta BREG-2363</description>
    <label>Formation State\Province or Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>