force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Incorporation_Date__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Incorporation Date</label>
    <type>Date</type>
</CustomField>