force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Locality_Of_Inc__c.field-meta.xml
<CustomField>
    <fullName>breg_Locality_Of_Inc__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Locality Of Inc (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>breg_Locality</valueSetName>
    </valueSet>
</CustomField>