force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Notes__c.field-meta.xml
<CustomField>
    <fullName>breg_Notes__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>