force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Number_of_initial_members__c.field-meta.xml
<CustomField>
    <fullName>breg_Number_of_initial_members__c</fullName>
    <description>Aalta BREG-2905</description>
    <label># Of Members</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>