force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Number_Of_members__c.field-meta.xml
<CustomField>
    <fullName>breg_Number_Of_members__c</fullName>
    <description>Aalta BREG-2269</description>
    <label># Of Members (Deprecated)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>