force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Partner_Term__c.field-meta.xml
<CustomField>
    <fullName>breg_Partner_Term__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Partner Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>