force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Pending_Transaction__c.field-meta.xml
<CustomField>
    <fullName>breg_Pending_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-2269</description>
    <label>Pending Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transaction Business Info (Pending Transaction)</relationshipLabel>
    <relationshipName>Transaction_Business_Info1</relationshipName>
    <type>Lookup</type>
</CustomField>