force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Registrant_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Registrant_Name__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Registrant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>