force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Sic_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Sic_Code__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>SIC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>