force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Similar_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Similar_Name__c</fullName>
    <description>Aalta BREG-2269, BREG-2897</description>
    <label>Similar Name</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>