force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Transaction__c.field-meta.xml
<CustomField>
    <fullName>breg_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BREG Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>Transaction Business Info</relationshipLabel>
    <relationshipName>Transaction_Business_Info</relationshipName>
    <type>Lookup</type>
</CustomField>