force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Vote__c.field-meta.xml
<CustomField>
    <fullName>breg_Vote__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Vote</label>
    <type>TextArea</type>
</CustomField>