force-app/main/default/objects/breg_Transaction_Business_Info__c/fields/breg_Xref_Name_2__c.field-meta.xml
<CustomField>
    <fullName>breg_Xref_Name_2__c</fullName>
    <description>Aalta BREG-2269</description>
    <label>Xref Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>